Style the color selection on the site

--- a/index.html
+++ b/index.html
@@ -8,6 +8,56 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Personal Site Style</h1>
+    </header>
+    <hr>
+    <main>
+        <section>
+            <h2>Colors</h2>
+            <div class="selection-box">
+                <div class="color yellow">
+                    <p class="description">Light Yellow</p>
+                </div>
+                <div class="color brown">
+                    <p class="description">Dark Brown</p>
+                </div>
+                <div class="color dark">
+                    <p class="description">Light Dark</p>
+                </div>
+                <div class="color purple">
+                    <p class="description">Light Purple</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Fonts</h2>
+            <div class="selection-box">
+                <div class="fonts">
+
+                </div>
+                <div class="fonts">
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <h2>Text Styles</h2>
+            <div class="selection-box">
+                <div class="text-style">
+
+                </div>
+                <div class="text-style">
+
+                </div>
+                <div class="text-style">
+
+                </div>
+                <div class="text-style">
+
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
