Optimize style for the whole page

--- a/index.html
+++ b/index.html
@@ -16,27 +16,31 @@
         <section>
             <h2>Colors</h2>
             <div class="selection-box">
-                <div class="color yellow">
+                <div class="content-box yellow">
                     <p class="description">Light Yellow</p>
+                    <p class="description">rgb(255, 255, 195)</p>
                 </div>
-                <div class="color brown">
+                <div class="content-box brown">
                     <p class="description">Dark Brown</p>
+                    <p class="description">rgb(82, 50, 50)</p>
                 </div>
-                <div class="color dark">
+                <div class="content-box dark">
                     <p class="description">Light Dark</p>
+                    <p class="description">rgb(46, 46, 46)</p>
                 </div>
-                <div class="color purple">
+                <div class="content-box purple">
                     <p class="description">Light Purple</p>
+                    <p class="description">rgb(133, 10, 133)</p>
                 </div>
             </div>
         </section>
         <section>
             <h2>Fonts</h2>
             <div class="selection-box">
-                <div class="fonts">
+                <div class="content-box">
 
                 </div>
-                <div class="fonts">
+                <div class="content-box">
 
                 </div>
             </div>
@@ -44,16 +48,16 @@
         <section>
             <h2>Text Styles</h2>
             <div class="selection-box">
-                <div class="text-style">
+                <div class="content-box">
 
                 </div>
-                <div class="text-style">
+                <div class="content-box">
 
                 </div>
-                <div class="text-style">
+                <div class="content-box">
 
                 </div>
-                <div class="text-style">
+                <div class="content-box">
 
                 </div>
             </div>
