Add remining text style to the page

--- a/index.html
+++ b/index.html
@@ -38,10 +38,14 @@
             <h2>Fonts</h2>
             <div class="selection-box">
                 <div class="content-box">
-
+                    <p class="heading">
+                        Example how the heading font lookslike.
+                    </p>
                 </div>
                 <div class="content-box">
-
+                    <p class="normal-text">
+                        Example how the text font lookslike.
+                    </p>
                 </div>
             </div>
         </section>
@@ -49,16 +53,20 @@
             <h2>Text Styles</h2>
             <div class="selection-box">
                 <div class="content-box">
-
+                    <p class="brown heading-txt">Heading</p>
+                    <ul>
+                        <li>Font Weight: Bold</li>
+                        <li>Font Size: 2rem</li>
+                        <li>Font Family: Cormorant Garamond</li>
+                    </ul>
                 </div>
                 <div class="content-box">
-
-                </div>
-                <div class="content-box">
-
-                </div>
-                <div class="content-box">
-
+                    <p class="dark paragraph-txt">Paragraph</p>
+                    <ul>
+                        <li>Font Weight: Normal</li>
+                        <li>Font Size: 16px</li>
+                        <li>Font Family: Roboto</li>
+                    </ul>
                 </div>
             </div>
         </section>
